# NN-enrichment3D

./: .gitignore  CLAUDE.md  NNPU_Modified2026_SCNI3D.ipynb  NNPU_Modified2026_SCNI3D_torch.ipynb  README.md  cluster_info.md  compare_backends.py  distributed.py  distributed_jax.py  main.py  nnpu_jax.py  nnpu_torch.py  partition.py  plot_results.py  pyproject.toml  run_nnpu.slurm  run_nnpu_ddp.slurm  run_nnpu_gpu.slurm  run_nnpu_jax.slurm  run_nnpu_jax_ddp.slurm  run_nnpu_jax_gpu.slurm
